--- a/pygeometa/templates/iso19139-flanders/main.j2
+++ b/pygeometa/templates/iso19139-flanders/main.j2
@@ -166,17 +166,40 @@
           </gmd:maintenanceAndUpdateFrequency>
         </gmd:MD_MaintenanceInformation>
       </gmd:resourceMaintenance>
+      {% set thesauri = record['identification']['thesauri'].split('\/') %}
+      {% for thesaurus in thesauri %}
       <gmd:descriptiveKeywords>
         <gmd:MD_Keywords>
-        {% set keywords = get_charstring('keywords', record['identification'], record['metadata']['language'], record['metadata']['language_alternate']) %}
+        {% set keywords = get_charstring('keywords', record[thesaurus], record['metadata']['language'], record['metadata']['language_alternate']) %}
         {% for kw1, kw2 in zip(keywords[0].split(','), keywords[1].split(',')) %}
         {{ cs.get_freetext('keyword', record['metadata']['language_alternate'], [kw1, kw2]) }}
         {% endfor %}
+          {% if record[thesaurus]['keywords_type'] %}
           <gmd:type>
-            <gmd:MD_KeywordTypeCode codeList="http://www.isotc211.org/2005/resources/Codelist/gmxCodelists.xml#MD_KeywordTypeCode" codeSpace="ISOTC211/19115" codeListValue="{{ record['identification']['keywords_type'] }}">{{ record['identification']['keywords_type'] }}</gmd:MD_KeywordTypeCode>
+            <gmd:MD_KeywordTypeCode codeList="http://www.isotc211.org/2005/resources/Codelist/gmxCodelists.xml#MD_KeywordTypeCode" codeSpace="ISOTC211/19115" codeListValue="{{ record[thesaurus]['keywords_type'] }}">{{ record[thesaurus]['keywords_type'] }}</gmd:MD_KeywordTypeCode>
           </gmd:type>
-        </gmd:MD_Keywords>
+          {% endif % }
+         <gmd:thesaurusName>
+          <gmd:CI_Citation>
+             <gmd:title>
+                <gco:CharacterString>{{ thesaurus }}</gco:CharacterString>
+             </gmd:title>
+             <gmd:date>
+                <gmd:CI_Date>
+                   <gmd:date>
+                      <gco:Date>record[thesaurus]['issued']</gco:Date>
+                   </gmd:date>
+                   <gmd:dateType>
+                      <gmd:CI_DateTypeCode codeList="http://standards.iso.org/ittf/PubliclyAvailableStandards/ISO_19139_Schemas/resources/Codelist/ML_gmxCodelists.xml#CI_DateTypeCode"
+                                           codeListValue="publication"/>
+                   </gmd:dateType>
+                </gmd:CI_Date>
+             </gmd:date>
+          </gmd:CI_Citation>
+        </gmd:thesaurusName>
+       </gmd:MD_Keywords>
       </gmd:descriptiveKeywords>
+      {% endfor %}
       <gmd:resourceConstraints>
         <gmd:MD_LegalConstraints>
           <gmd:accessConstraints>
