--- a/pygeometa/templates/iso19139-flanders/main.j2
+++ b/pygeometa/templates/iso19139-flanders/main.j2
@@ -76,51 +76,19 @@
     </gmd:MD_VectorSpatialRepresentation>
     {% endif %}
   </gmd:spatialRepresentationInfo>
+  {% if record['spatial']['crs'] %}
   <gmd:referenceSystemInfo>
     <gmd:MD_ReferenceSystem>
       <gmd:referenceSystemIdentifier>
         <gmd:RS_Identifier>
-          <gmd:authority>
-            <gmd:CI_Citation>
-              <gmd:title>
-                <gco:CharacterString>European Petroleum Survey Group (EPSG) Geodetic Parameter Registry</gco:CharacterString>
-              </gmd:title>
-              <gmd:date>
-                <gmd:CI_Date>
-                  <gmd:date>
-                    <gco:Date>2008-11-12</gco:Date>
-                  </gmd:date>
-                  <gmd:dateType>
-                    <gmd:CI_DateTypeCode codeList="http://www.isotc211.org/2005/resources/Codelist/gmxCodelists.xml#CI_DateTypeCode" codeSpace="ISOTC211/19115" codeListValue="publication">publication</gmd:CI_DateTypeCode>
-                  </gmd:dateType>
-                </gmd:CI_Date>
-              </gmd:date>
-              <gmd:citedResponsibleParty>
-                <gmd:CI_ResponsibleParty>
-                  <gmd:organisationName>
-                    <gco:CharacterString>European Petroleum Survey Group</gco:CharacterString>
-                  </gmd:organisationName>
-                  <gmd:contactInfo>
-                    <gmd:CI_Contact>
-                      <gmd:onlineResource>
-                        <gmd:CI_OnlineResource>
-                          <gmd:linkage>
-                            <gmd:URL>http://www.epsg-registry.org</gmd:URL>
-                          </gmd:linkage>
-                        </gmd:CI_OnlineResource>
-                      </gmd:onlineResource>
-                    </gmd:CI_Contact>
-                  </gmd:contactInfo>
-                  <gmd:role>
-                    <gmd:CI_RoleCode codeList="http://www.isotc211.org/2005/resources/Codelist/gmxCodelists.xml#CI_RoleCode" codeSpace="ISOTC211/19115" codeListValue="originator">originator</gmd:CI_RoleCode>
-                  </gmd:role>
-                </gmd:CI_ResponsibleParty>
-              </gmd:citedResponsibleParty>
-            </gmd:CI_Citation>
-          </gmd:authority>
           <gmd:code>
-            <gco:CharacterString>urn:ogc:def:crs:EPSG:{{ record['spatial']['crs'] }}</gco:CharacterString>
+            <gco:CharacterString>{{ record['spatial']['crs'] }}</gco:CharacterString>
           </gmd:code>
+          {% if record['spatial']['crst'] %}
+          <gmd:codeSpace>
+             <gco:CharacterString>{{ record['spatial']['crst'] }}</gco:CharacterString>
+          </gmd:codeSpace>
+          {% endif %}
           <gmd:version>
             <gco:CharacterString>6.18.3</gco:CharacterString>
           </gmd:version>
@@ -128,6 +96,7 @@
       </gmd:referenceSystemIdentifier>
     </gmd:MD_ReferenceSystem>
   </gmd:referenceSystemInfo>
+  {% endif %}
   <gmd:identificationInfo>
     {% if record['metadata']['hierarchyLevel'] == 'service' %}
     <srv:SV_ServiceIdentification>
@@ -239,7 +208,11 @@
       <gmd:topicCategory>
         <gmd:MD_TopicCategoryCode>{{ record['identification']['topiccategory'] }}</gmd:MD_TopicCategoryCode>
       </gmd:topicCategory>
+      {% if record['metadata']['hierarchyLevel'] == 'service' %}
+      <srv:extent>
+      {% else %}
       <gmd:extent>
+      {% endif %}
         {% set bbox = record['spatial']['bbox'].split(',') %}
         <gmd:EX_Extent>
           <gmd:geographicElement>
@@ -293,7 +266,11 @@
             </gmd:EX_TemporalExtent>
           </gmd:temporalElement>
         </gmd:EX_Extent>
+      {% if record['metadata']['hierarchyLevel'] == 'service' %}
+      </srv:extent>
+      {% else %}
       </gmd:extent>
+      {% endif %}
       {% if record['identification']['url'] %}
       {{ cs.get_freetext('supplementalInformation', record['metadata']['language_alternate'], get_charstring('url', record['identification'], record['metadata']['language'], record['metadata']['language_alternate'])) }}
       {% endif %}
