--- a/pygeometa/templates/iso19139-flanders/main.j2
+++ b/pygeometa/templates/iso19139-flanders/main.j2
@@ -102,7 +102,7 @@
     <srv:SV_ServiceIdentification>
     {% else %}
     <gmd:MD_DataIdentification>
-    {% endif }
+    {% endif %}
       <gmd:citation>
         <gmd:CI_Citation>
           {{ cs.get_freetext('title', record['metadata']['language_alternate'], get_charstring('title', record['identification'], record['metadata']['language'], record['metadata']['language_alternate'])) }}
@@ -139,7 +139,7 @@
           </gmd:maintenanceAndUpdateFrequency>
         </gmd:MD_MaintenanceInformation>
       </gmd:resourceMaintenance>
-      {% if record['identifcation']['keywords'] %}
+      {% if record['identification']['keywords'] and len(record['identification']['keywords']) > 0 %}
       <gmd:descriptiveKeywords>
         <gmd:MD_Keywords>
         {% set keywords = get_charstring('keywords', record['identification'], record['metadata']['language'], record['metadata']['language_alternate']) %}
@@ -161,7 +161,7 @@
           <gmd:type>
             <gmd:MD_KeywordTypeCode codeList="http://www.isotc211.org/2005/resources/Codelist/gmxCodelists.xml#MD_KeywordTypeCode" codeSpace="ISOTC211/19115" codeListValue="{{ record[thesaurus]['keywords_type'] }}">{{ record[thesaurus]['keywords_type'] }}</gmd:MD_KeywordTypeCode>
           </gmd:type>
-          {% endif % }
+          {% endif %}
          <gmd:thesaurusName>
           <gmd:CI_Citation>
              <gmd:title>
@@ -227,7 +227,7 @@
                     <gml:LinearRing>
                       <gml:posList srsName="{{ record['spatial']['crs'] }}" srsDimension="2">{{ bbox[0] }} {{ bbox[1] }} {{ bbox[0] }} {{ bbox[3] }} {{ bbox[2] }} {{ bbox[3] }} {{ bbox[2] }} {{ bbox[1] }} {{ bbox[0] }} {{ bbox[1] }}</gml:posList>
                     </gml:LinearRing>
-                  <gml:exterior>
+                  </gml:exterior>
                 </gml:Polygon>
               </gmd:polygon>
             </gmd:EX_BoundingPolygon>
@@ -274,7 +274,7 @@
       {% if record['identification']['url'] %}
       {{ cs.get_freetext('supplementalInformation', record['metadata']['language_alternate'], get_charstring('url', record['identification'], record['metadata']['language'], record['metadata']['language_alternate'])) }}
       {% endif %}
-    {% if record['metadata']['hierarchyLevel'] == 'service' %}
+    {% if record['metadata']['hierarchylevel'] == 'service' %}
        {% if record['metadata']['spatialdataservicetype'] %}
        <srv:serviceType>
            <gco:LocalName>{{ record['metadata']['spatialdataservicetype'] }}</gco:LocalName>
@@ -283,7 +283,7 @@
     </srv:SV_ServiceIdentification>
     {% else %}
     </gmd:MD_DataIdentification>
-    {% endif }
+    {% endif %}
   </gmd:identificationInfo>
   <gmd:distributionInfo>
     <gmd:MD_Distribution>
