--- a/pygeometa/templates/iso19139-flanders/main.j2
+++ b/pygeometa/templates/iso19139-flanders/main.j2
@@ -76,6 +76,19 @@
     </gmd:MD_VectorSpatialRepresentation>
     {% endif %}
   </gmd:spatialRepresentationInfo>
+  {% if record['spatial']['resolution'] %}
+  <gmd:spatialResolution>
+            <gmd:MD_Resolution>
+               <gmd:equivalentScale>
+                  <gmd:MD_RepresentativeFraction>
+                     <gmd:denominator>
+                        <gco:Integer>{{ record['spatial']['resolution'] }}</gco:Integer>
+                     </gmd:denominator>
+                  </gmd:MD_RepresentativeFraction>
+               </gmd:equivalentScale>
+            </gmd:MD_Resolution>
+   </gmd:spatialResolution>
+  {% endif %}
   {% if record['spatial']['crs'] %}
   <gmd:referenceSystemInfo>
     <gmd:MD_ReferenceSystem>
@@ -170,7 +183,7 @@
              <gmd:date>
                 <gmd:CI_Date>
                    <gmd:date>
-                      <gco:Date>record[thesaurus]['issued']</gco:Date>
+                      <gco:Date>{{ record[thesaurus]['issued'] }}</gco:Date>
                    </gmd:date>
                    <gmd:dateType>
                       <gmd:CI_DateTypeCode codeList="http://standards.iso.org/ittf/PubliclyAvailableStandards/ISO_19139_Schemas/resources/Codelist/ML_gmxCodelists.xml#CI_DateTypeCode"
@@ -196,11 +209,13 @@
           {% endif %}
         </gmd:MD_LegalConstraints>
       </gmd:resourceConstraints>
+      {% if record['spatial']['datatype'] %}
       <gmd:spatialRepresentationType>
         <gmd:MD_SpatialRepresentationTypeCode codeList="http://www.isotc211.org/2005/resources/Codelist/gmxCodelists.xml#MD_SpatialRepresentationTypeCode" codeSpace="ISOTC211/19115" codeListValue="{{ record['spatial']['datatype'] }}">{{ record['spatial']['datatype'] }}</gmd:MD_SpatialRepresentationTypeCode>
       </gmd:spatialRepresentationType>
+      {% endif %}
       <gmd:language>
-        <gco:CharacterString>{{ record['identification']['language'] }}</gco:CharacterString>
+        <gmd:LanguageCode codeList="http://www.loc.gov/standards/iso639-2/" codeSpace="ISO 639-2" codeListValue="{{ record['identification']['language'] }}">{{ record['identification']['language'] }}</gmd:LanguageCode>
       </gmd:language>
       <gmd:characterSet>
         <gmd:MD_CharacterSetCode codeList="http://www.isotc211.org/2005/resources/Codelist/gmxCodelists.xml#MD_CharacterSetCode" codeSpace="ISOTC211/19115" codeListValue="{{ record['identification']['charset'] }}">{{ record['identification']['charset'] }}</gmd:MD_CharacterSetCode>
@@ -216,7 +231,7 @@
         {% set bbox = record['spatial']['bbox'].split(',') %}
         <gmd:EX_Extent>
           <gmd:geographicElement>
-            {% if record['spatial']['crs'] != '4326' %}
+            {% if record['spatial']['crs'] != '4326' and '4326' not in record['spatial']['crs'] %}
             <gmd:EX_BoundingPolygon>
               <gmd:extentTypeCode>
                 <gco:Boolean>1</gco:Boolean>
