--- a/pygeometa/templates/iso19139-flanders/main.j2
+++ b/pygeometa/templates/iso19139-flanders/main.j2
@@ -122,7 +122,7 @@
   </gmd:referenceSystemInfo>
   {% endif %}
   <gmd:identificationInfo>
-    {% if record['metadata']['hierarchyLevel'] == 'service' %}
+    {% if record['metadata']['hierarchylevel'] == 'service' %}
     <srv:SV_ServiceIdentification>
     {% else %}
     <gmd:MD_DataIdentification>
@@ -319,9 +319,9 @@
            <gco:LocalName>{{ record['metadata']['spatialdataservicetype'] }}</gco:LocalName>
        </srv:serviceType>
        {% endif %}
-    </srv:SV_ServiceIdentification>
+        </srv:SV_ServiceIdentification>
     {% else %}
-    </gmd:MD_DataIdentification>
+        </gmd:MD_DataIdentification>
     {% endif %}
   </gmd:identificationInfo>
   <gmd:distributionInfo>
