improved parsing for incomplete ISO/INSPIRE files (typically coming from less strict environments)

--- a/pygeometa/templates/common/iso19139-charstring.j2
+++ b/pygeometa/templates/common/iso19139-charstring.j2
@@ -3,7 +3,7 @@
       <gmd:{{ element }}>
         <gco:CharacterString>{{ myvars[0]|trim|e }}</gco:CharacterString>
       </gmd:{{ element }}>
-{% else %}q
+{% else %}
       <gmd:{{ element }} xsi:type="gmd:PT_FreeText_PropertyType">
         <gco:CharacterString>{{ myvars[0]|trim|e }}</gco:CharacterString>
           <gmd:PT_FreeText>
