--- a/pygeometa/templates/iso19139-flanders/main.j2
+++ b/pygeometa/templates/iso19139-flanders/main.j2
@@ -255,22 +255,6 @@
         {% set bbox = record['spatial']['bbox'].split(',') %}
         <gmd:EX_Extent>
           <gmd:geographicElement>
-            {% if record['spatial']['crs'] != '4326' and '4326' not in record['spatial']['crs'] %}
-            <gmd:EX_BoundingPolygon>
-              <gmd:extentTypeCode>
-                <gco:Boolean>1</gco:Boolean>
-              </gmd:extentTypeCode>
-              <gmd:polygon>
-                <gml:Polygon srsName="{{ record['spatial']['crs'] }}" srsDimension="2">
-                  <gml:exterior>
-                    <gml:LinearRing>
-                      <gml:posList srsName="{{ record['spatial']['crs'] }}" srsDimension="2">{{ bbox[0] }} {{ bbox[1] }} {{ bbox[0] }} {{ bbox[3] }} {{ bbox[2] }} {{ bbox[3] }} {{ bbox[2] }} {{ bbox[1] }} {{ bbox[0] }} {{ bbox[1] }}</gml:posList>
-                    </gml:LinearRing>
-                  </gml:exterior>
-                </gml:Polygon>
-              </gmd:polygon>
-            </gmd:EX_BoundingPolygon>
-            {% else %}
             <gmd:EX_GeographicBoundingBox>
               <gmd:extentTypeCode>
                 <gco:Boolean>1</gco:Boolean>
@@ -288,7 +272,6 @@
                 <gco:Decimal>{{ bbox[3] }}</gco:Decimal>
               </gmd:northBoundLatitude>
             </gmd:EX_GeographicBoundingBox>
-            {% endif %}
           </gmd:geographicElement>
           <gmd:temporalElement>
             <gmd:EX_TemporalExtent>
@@ -332,6 +315,12 @@
         <gmd:MD_Format>
           <gmd:name>{{ v['format'] }}</gmd:name>
           <gmd:version>{{ v['format_version'] }}</gmd:version>
+        </gmd:MD_Format>
+      </gmd:distributionFormat>
+      {% elif k.startswith('distribution:') and v['format'] and not v['format_version'] %}
+      <gmd:distributionFormat>
+        <gmd:MD_Format>
+          <gmd:name>{{ v['format'] }}</gmd:name>
         </gmd:MD_Format>
       </gmd:distributionFormat>
       {% endif %}
